tests/good/tests/bad/testLineNumber.grc
x := 123
y := "oops"
z := x + y
